# Nanoflow

./: .gitignore  .gitmodules  README.md  installAnaconda.sh  modelDownload.sh  perf.sh  serve.sh  setup.sh
.github/workflows/: build.yml
datasets/: .gitignore  gen.sh
datasets/traces/: lmsys.csv  sharegpt.csv
datasets/utils/: gen_const_len_req.py  generate_fix_trace.sh  generate_real_trace.sh  prepare_dataset.py  prepare_real_data.py  prepare_splitwise_data.py  prepare_synthetic_data.py  preprocess_lmsys.py  preprocess_sharegpt.py  utils.py
gemv/: CMakeLists.txt
gemv/include/: attention_impl.cuh  decode_attention_decl.cuh  prefill_attention_decl.cuh  small_blk_utils.cuh
gemv/include/attention/: decode.cuh  handler.cuh  prefill.cuh
gemv/python/: generate_batch_paged_decode_inst.py  generate_batch_paged_prefill_inst.py  literal_map.py
gemv/src/: bench_batch_decode.cu  bench_batch_prefill.cu  test_batch_decode.cu  test_batch_prefill.cu
groundtruth/: detokenize.py  test.py  tokenize1.py
pipeline/: CMakeLists.txt
pipeline/config/: 1024-2.json  1024-3.json  1024.json  2048.json  512.json  768.json  deepseek.json
pipeline/config_all/llama2-70B/: 1024.json  2048.json  768.json  nanobatch-only.json  non-overlap.json  pllm-offload.json
pipeline/config_all/llama2-70B/correct_40G/: 2048.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama2-70B/fewer_layers/: 1024.json  2048.json  768.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3-70B/: 1024.json  2048.json  768.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3-70B/correct_40G/: 2048.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3-70B/fewer_layers/: 1024.json  2048.json  768.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3-8B/: 1024.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3-8B/correct_40G/: nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3-8B/fewer_layers/: 1024.json  nanobatch-only.json
pipeline/config_all/llama3.1-70B/: 1024.json  2048.json  768.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3.1-70B/correct_40G/: 2048.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3.1-70B/fewer_layers/: 1024.json  2048.json  768.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3.1-8B/: 1024.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3.1-8B/correct_40G/: 1024.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/llama3.1-8B/fewer_layers/: 1024.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/mixtral-8-7B/: 1024.json
pipeline/config_all/qwen2-72B/: 1024.json  2048.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/qwen2-72B/correct_40G/: 1024.json  2048.json  nanobatch-only.json  non-overlap.json
pipeline/config_all/qwen2-72B/fewer_layers/: 2048.json  nanobatch-only.json  non-overlap.json
pipeline/eval/: .gitignore  baseline_data.py  calculate_speedup.py  clean_all.sh  eval.sh  eval_output_example.py  merge_results.py  plot_all.py  run_all.sh  run_offline.sh  summarize.py
pipeline/eval/eval-ablation/: run.py
pipeline/eval/eval-fix-offline/: run.py
pipeline/eval/eval-real-offline/: run.py
pipeline/eval/eval-real-online-1024/: run.py
pipeline/eval/eval-real-online-2048/: auto_datapoint.py  run.py
pipeline/eval/eval-real-online-768/: clean.sh  run.py
pipeline/include/: allocManager.cuh  comm.h  computeBound.cuh  config.h  cutlassGemmWrapper.cuh  cutlassGemmWrapperImpl.cuh  dualWrapper.cuh  eventManager.cuh  gemmFactory.cuh  gemmShape.cuh  gemvConfig.cuh  gemvDependency.cuh  gemvWrapper.cuh  helper.h  netWrapper.cuh  networkManager.cuh  offloadKernel.cuh  operatorWrapper.cuh  otherWrapper.cuh  pipeline.h  rms_norm.cuh  sleep.cuh  small_cuda_operator.cuh  tensor.cuh  tensorLogger.cuh  tensorManager.cuh  vortexData.cuh
pipeline/perf/: test.py
pipeline/src/: comm_test.cu  computeBound.cu  computeMain.cu  gemvDependency.cu  load_config.cu  networkManager.cu  offloadKernel.cu  pipeline.cu  pipeline_local.cu  pipeline_nonoverlap.cu  pipeline_nonoverlap_local.cu  pipeline_nonoverlap_nanobatch.cu  pybind.cu  pythonProfiling.py  run.sh  sleep.cu  small_cuda_operator.cu  tensorLogger.cu  test.py  test_dual.cu  vortexData.cu
pipeline/src/generate-gemm/: Makefile  gemmFactory.in  genGEMM.py
pipeline/utils/: .gitignore  README.md  frontend.py  gen_req.py  kv_cache.py  listToCSV.py  plotSchedule.py  plot_trend.py  pybindUtil.py  request_info.py  scheduler.py  serve.py  serve_8B.py  serve_8B_3_1.py  weightLoader.py  weightSaver.py  weightSaver_3_1.py
